httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: web
  labels: { app: httpd }
spec:
  type: ClusterIP
  selector: { app: httpd }
  ports:
    - name: http
      port: 80
      targetPort: http
