httpd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd
  namespace: web
  labels: { app: httpd }
spec:
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
